# zedx_ws

./: start_expeiment.sh  stop_expeiment.sh  system_launch.sh
src/zed_odometry/: CMakeLists.txt  package.xml
src/zed_odometry/launch/: zed_record_odom.launch.py
src/zed_odometry/rviz/: display.rviz
src/zed_odometry/zed_odometry/: analyzer.py  capture_images.py  odometry_analyzer.py  record_odometry.py  record_zed_odom.py
zed_odom_recordings/zed_odom_0.5zigzag/: metadata.yaml
zed_odom_recordings/zed_odom_x_1m/: metadata.yaml
